Disable zooming on mobile; also no longer resizes when vertical size changes

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 #graphwrapper{
     position: sticky;
     
+    top:0;
 }
 
 .graphCanvas{
